refactor:modify handles req resp
