# internal/model/response/image_response.go
@@ -2,8 +2,11 @@ package response
 
 // ImageUploadResponse defines the upload image response format
 type ImageUploadResponse struct {
-	ID   uint   `json:"id" example:"1"`
-	Path string `json:"path" example:"abc123.jpg"`
+	ID            uint   `json:"id" example:"1"`
+	OriginalName  string `json:"original_name" example:"abc"`
+	FileName      string `json:"file_name" example:"abc"`
+	ThumbnailPath string `json:"thumbnail_path" example:"abc123.jpg"`
+	Path          string `json:"path" example:"abc123.jpg"`
 }
 
 // ImageDeleteResponse defines the image deletion response format
